# PICO-Template

./: CMakeLists.txt  README.md  openocd.cfg
picotool/: picotoolConfigVersion.cmake
